[package]
name = "libnice"
version = "0.1.0"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"
description = "Safe, high-level Rust bindings to libnice."
license = "LGPL-2.1 OR MPL-1.1"
repository = "https://github.com/johni0702/rust-libnice"

[dependencies]
libnice-sys = { git = "https://github.com/abbradar/rust-libnice-sys", rev = "78b0b60" }
foreign-types = "0.3"
futures = "0.1"
# webrtc-sdp = "0.2"
webrtc-sdp = { git = "https://github.com/nils-ohlmeier/rsdparsa/", rev = "ccf6249" }
tokio-io = "0.1"

[dev-dependencies]
tokio = "0.1"
