[package]
name = "libnice"
version = "0.2.2"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"
description = "Safe, high-level Rust bindings to libnice."
license = "LGPL-2.1 OR MPL-1.1"
repository = "https://github.com/johni0702/rust-libnice"

[dependencies]
libnice-sys = "0.3"
libc = "0.2"
glib-sys = "0.10"
gobject-sys = "0.10"
glib = "0.10"
futures = "0.3"
webrtc-sdp = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core"] }
